--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,9 +6,6 @@
     align-items: end;
 }
 
-#header-contents {
-    position: relative;
-}
 
 #header-bar {
     background: rgb(191, 90, 2);
@@ -23,5 +20,48 @@
     height: 15vh;
     width: auto;
     position: absolute;
-    top: -8px;
+    top: 4%;
+    left: 30px;
+}
+
+/* Adaptive layout */
+@media (min-width: 480px) {
+    #header {
+        height: 15vh;
+        min-height: 100px
+    }
+
+    #header-detail {
+        min-height: 66px;
+    }
+
+    #logo {
+        height: 15vh;
+    }
+
+}
+
+/* Tablets */
+@media (min-width: 720px) {
+    #header {
+        height: 15vh;
+        min-height: 100px;
+    }
+
+    #header-detail {
+        min-height: 66px;
+    }
+
+    #logo {
+        height: 15vh;
+        left: 40px;
+    }
+}
+
+/* Laptops */
+@media (min-width: 1024px) {
+    #header {
+        height: 15vh;
+        min-height: 85px;
+    }
 }
