Add weather icons and fonts assets

--- a/src/components/ContentContainer/ContentContainer.css
+++ b/src/components/ContentContainer/ContentContainer.css
@@ -8,3 +8,11 @@
     display: inline-block;
     margin: 0 10vw;
 }
+
+#content-container h1 {
+    font-family: 'Star4000';
+}
+
+#content-container p {
+    font-family: 'Star4000-Large';
+}
