--- a/src/components/MainTempDisplay/MainTempDisplay.css
+++ b/src/components/MainTempDisplay/MainTempDisplay.css
@@ -25,7 +25,7 @@
     font-size: 2rem;
 }
 
-/* Weather icon */
+/* Weather icon - it works because the component returns an img anyway*/
 #main-temp-container img {
     height: 100px;
     width: auto;
