--- a/src/components/ContentContainer/ContentContainer.css
+++ b/src/components/ContentContainer/ContentContainer.css
@@ -3,8 +3,21 @@
     box-shadow: inset 0 0 20px 10px #2650B0;
     padding: 50px 30px 30px;
     height: 80vh;
-    display: inline-block;
     margin: 0 10vw;
     width: 80%;
     color: white;
+    display: grid;
+    grid-template-areas:
+        "main"
+        "secondary";
+}
+
+.content-container-item {
+    height: minmax(300px, auto);
+}
+
+@media screen and (min-width: 560px) {
+    #content-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
