--- a/src/components/ContentContainer/ContentContainer.css
+++ b/src/components/ContentContainer/ContentContainer.css
@@ -2,7 +2,7 @@
     background: linear-gradient(#21285a 0 0) padding-box;
     box-shadow: inset 0 0 20px 20px #2650B0;
     padding: 50px 30px 30px;
-    height: 80vh;
+    height: 100%;
     margin: 0 10vw;
     width: 80%;
     color: white;
