Adjust responsive design to hide the footer

--- a/src/components/ContentContainer/ContentContainer.css
+++ b/src/components/ContentContainer/ContentContainer.css
@@ -17,3 +17,9 @@
         grid-template-columns: repeat(2, 1fr);
     }
 }
+
+@media screen and (max-width: 560px) {
+    #content-container {
+        height: 80vh;
+    }
+}
