--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,9 @@ main {
     background: linear-gradient(0deg, rgba(192, 91, 2, 1) 0%, rgba(72, 34, 66, 1) 80%, rgba(46, 18, 80, 1) 100%);
     height: calc(100vh - 36vh);
 }
+
+@media screen and (max-width: 560px) {
+    main {
+        height: calc(100vh - 15vh);
+    }
+}
