--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 }
 
 @font-face {
-    font-family: 'star4000-Small';
+    font-family: 'Star4000-Small';
     src: url(./assets/Fonts/Star4000/Star4000-Small.ttf) format('truetype');
 }
 
