--- a/src/components/Clock/Clock.css
+++ b/src/components/Clock/Clock.css
@@ -13,3 +13,9 @@
     flex-grow: 1;
     text-align: justify;
 }
+
+@media screen and (max-width: 560px) {
+    #clock {
+        display: none;
+    }
+}
