--- a/src/components/Clock/Clock.css
+++ b/src/components/Clock/Clock.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-
+    background-color: transparent;
     font-family: "Star4000";
     font-size: 4vmin;
     color: white;
