--- a/src/components/MainTempDisplay/MainTempDisplay.css
+++ b/src/components/MainTempDisplay/MainTempDisplay.css
@@ -29,6 +29,11 @@
     height: 20vmin;
 }
 
+#main-weather-wind-speed {
+    font-family: 'Star4000';
+    font-size: 7vmin;
+}
+
 @media screen and (max-width: 560px) {
     #main-temperature {
         font-size: 40pt
